# fpga-vector-accelerator-mp

./: .gitignore  .gitmodules  README.md
Hardware/: README.md  soma_arrays_50_1600.xpr
Hardware/soma_arrays_50_1600.srcs/constrs_1/new/: netlist.xdc
Hardware/soma_arrays_50_1600.srcs/sources_1/bd/design_arrays/: design_arrays.bd  design_arrays.bda
Hardware/soma_arrays_50_1600.srcs/utils_1/imports/synth_1/: design_arrays_wrapper.dcp
Software/: README.md
Software/soma_arrays_50_1600_app/: README.md
Software/soma_arrays_50_1600_app/src/: helloworld.c  lscript.ld
hls/: README.md
hls/HLS/hls_2024/_ide/: .peers.ini  settings.json  workspace_journal.py  workspace_journal_12972.py  workspace_journal_19660.py  workspace_journal_8884.py
hls/HLS/hls_2024/add_sub/: compile_commands.json  operacoes_aritmeticas.cpp
hls/HLS/hls_2024/add_sub/add_sub/: add_sub.hlscompile_summary  add_sub.hlsrun_impl_summary
hls/HLS/hls_2024/adder/: adder.cpp  adder.h  compile_commands.json  hls_config.cfg
hls/HLS/hls_2024/adder/adder/: adder.hlscompile_summary  adder.hlsrun_impl_summary
hls/HLS/hls_2024/adder_new/: adder_new.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2024/adder_new/adder_new/: adder_new.hlscompile_summary  adder_new.hlsrun_impl_summary
hls/HLS/hls_2024/hello_world/: compile_commands.json  hello_world.h  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2024/hello_world/_ide/: launch.json
hls/HLS/hls_2024/hello_world/hello_world/: hello_world.hlscompile_summary  hello_world.hlsrun_csim_summary
hls/HLS/hls_2024/soma/: compile_commands.json  hls_config.cfg  soma.cpp  vitis-comp.json
hls/HLS/hls_2024/soma/soma/: soma.hlsrun_impl_summary
hls/HLS/hls_2025/.rigel_lopper/: lop-cpu-oslist.dts.pp  system-top.dts.pp
hls/HLS/hls_2025/_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_11324.py  workspace_journal_14812.py  workspace_journal_16368.py  workspace_journal_17960.py  workspace_journal_18860.py  workspace_journal_19148.py  workspace_journal_19540.py  workspace_journal_19656.py  workspace_journal_2136.py  workspace_journal_2476.py  workspace_journal_3436.py  workspace_journal_3724.py  workspace_journal_9148.py  workspace_journal_9560.py
hls/HLS/hls_2025/matrix_mult_hw/: compile_commands.json  hls_config.cfg  matrix_mult_ip.cpp  matrix_mult_ip.h  tb_matrix_mult.cpp  vitis-comp.json
hls/HLS/hls_2025/matrix_mult_hw/_ide/: launch.json
hls/HLS/hls_2025/matrix_mult_hw/matrix_mult_hw/: matrix_mult_hw.hlscompile_summary  matrix_mult_hw.hlsrun_csim_summary  matrix_mult_hw.hlsrun_impl_summary  vitis-comp.json
hls/HLS/hls_2025/matrix_mult_hw/matrix_mult_hw/hls/impl/misc/drivers/matrix_mult_hw_v1_0/src/: CMakeLists.txt  xmatrix_mult_hw.h  xmatrix_mult_hw_hw.h  xmatrix_mult_hw_linux.c
hls/HLS/hls_2025/soma_array_generic_10000/: compile_commands.json  generic_mult.cpp  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_array_generic_10000/soma_array_generic_10000/: soma_array_generic_10000.hlscompile_summary  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_100/: array_100.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_100/soma_arrays_100/: soma_arrays_100.hlscompile_summary  soma_arrays_100.hlsrun_impl_summary  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_1000/: array_1000.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_1000/soma_arrays_1000/: soma_arrays_1000.hlscompile_summary  soma_arrays_1000.hlsrun_impl_summary  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_1600/: array_1600.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_1600/soma_arrays_1600/: soma_arrays_1600.hlscompile_summary  soma_arrays_1600.hlsrun_impl_summary  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_1600/soma_arrays_1600/hls/impl/misc/drivers/mult_hw_1600_v1_0/src/: CMakeLists.txt  Makefile  xmult_hw_1600.h  xmult_hw_1600_linux.c  xmult_hw_1600_sinit.c
hls/HLS/hls_2025/soma_arrays_200/: array_200.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_200/soma_arrays_200/: soma_arrays_200.hlscompile_summary  soma_arrays_200.hlsrun_impl_summary  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_400/: array_400.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_400/soma_arrays_400/: soma_arrays_400.hlscompile_summary  soma_arrays_400.hlsrun_impl_summary  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_50/: array_50.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_800/: array_800.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_800/soma_arrays_800/hls/impl/misc/drivers/mult_hw_800_v1_0/src/: CMakeLists.txt  Makefile  xmult_hw_800.c  xmult_hw_800.h  xmult_hw_800_sinit.c
hls/HLS/hls_2025/soma_arrays_in_memory/: array_summer.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/hls_2025/soma_arrays_in_memory/soma_arrays_in_memory/hls/impl/misc/drivers/array_summer_v1_0/src/: CMakeLists.txt  Makefile  xarray_summer.c  xarray_summer.h  xarray_summer_hw.h  xarray_summer_sinit.c
hls/HLS/projeto_hls_classic/: .analytics
hls/HLS/projeto_hls_classic/_ide/: .peers.ini  .vitisPlatformRepo.json  settings.json  workspace_journal.py  workspace_journal_12024.py  workspace_journal_16472.py  workspace_journal_17828.py  workspace_journal_18856.py  workspace_journal_6408.py  workspace_journal_9884.py
hls/HLS/projeto_hls_classic/add_sub/: compile_commands.json  hls_config.cfg  operacoes.h  top_level.cpp  vitis-comp.json
hls/HLS/projeto_hls_classic/adder/: adder.cpp  adder.h  compile_commands.json  hls_config.cfg  vitis-comp.json
hls/HLS/projeto_hls_classic/adder/adder/hls/impl/misc/drivers/adder_v1_0/src/: CMakeLists.txt  Makefile  xadder.c  xadder_hw.h  xadder_linux.c  xadder_sinit.c
hls/HLS/projeto_hls_classic/hello_world/: compile_commands.json  hello_world.cpp  hello_world_tb.cpp
hls/HLS/projeto_hls_classic/soma/: compile_commands.json
(+524 files in other folders)
